trunk/Archive2/43/096cb398cbc973/output
main.cpp: In function 'int main()':
main.cpp:13:23: error: invalid initialization of non-const reference of type 'Foo&' from an rvalue of type 'Foo'
     ProcessFoo(Foo(42));
                       ^
main.cpp:7:6: note: in passing argument 1 of 'void ProcessFoo(Foo&)'
 void ProcessFoo(Foo& foo)
      ^
